fix scrollbar issue, make captions consistent, use figures

--- a/issue3.css
+++ b/issue3.css
@@ -40,7 +40,6 @@ html, body {
    top: 50%;
    margin-top: -320px;
    margin-left: 110px;
-   overflow-x: scroll;
    white-space: nowrap;
 }
 
